# MSc_thesis_hydromt_sfincs

./: .gitignore  environment.yml  make_env.py  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test_numba.yml  tests.yml  tests_dev.yml
docs/: changelog.rst  conf.py  index.rst  migrate_version.py
docs/_static/: HydroMT_SFINCS_V1_diagram.drawio  theme-deltares.css
docs/api/: api.rst
docs/dev_guide/: intro.rst
docs/getting_started/: example_index.rst  installation.rst  intro.rst
docs/user_guide/: intro.rst
docs/user_guide/1_getting_started_hydromt/: data_catalog.rst  index.rst
docs/user_guide/2_build_model/: index.rst  model_build.rst  model_components.rst  model_methods.rst
docs/user_guide/3_update_model/: index.rst  model_update.rst
docs/user_guide/4_run_model/: sfincs_run.rst
docs/user_guide/5_postprocess_model/: sfincs_analyse.rst
docs/user_guide/6_migration_guide/: conversion_table.csv  conversion_table.md  migration_hydromt.rst
envs/: hydromt-sfincs-dev.yml  hydromt-sfincs-min.yml
examples/: 0_build_from_cli.ipynb  1_build_from_script.ipynb  2_update_forcing.ipynb  3_update_geometries.ipynb  4_run_model.ipynb  5_plot_results_hmax.ipynb  6_make_results_animation.ipynb  sfincs_base_build.yml  sfincs_base_update.yml
examples/data/: include_polygon_V1.geojson  obs.geojson
examples/sfincs_compound/: run.bat  sfincs.bnd  sfincs.bzs  sfincs.dep  sfincs.dis  sfincs.ind  sfincs.inp  sfincs.manning  sfincs.msk  sfincs.obs  sfincs.src  sfincs_his.nc  sfincs_log.txt
examples/sfincs_compound/gis/: bnd.geojson  dep.tif  dis.geojson  manning.tif  mask.tif  obs.geojson  region.geojson
hydromt_sfincs/: __init__.py  plots.py  quadtree.py  sfincs.py  utils.py
hydromt_sfincs/components/: output.py
hydromt_sfincs/components/config/: __init__.py  config.py  config_variables.py
hydromt_sfincs/components/forcing/: __init__.py  boundary_conditions.py  deltares_ini.py  discharge_points.py  meteo.py  rivers.py  snapwave_boundary_conditions.py  water_level.py
hydromt_sfincs/components/geometries/: __init__.py  cross_sections.py  drainage_structures.py  observation_points.py  thin_dams.py  wave_makers.py  weirs.py
hydromt_sfincs/components/grid/: __init__.py  elevation.py  infiltration.py  initial_conditions.py  mask.py  regulargrid.py  roughness.py  storage_volume.py  subgrid.py
hydromt_sfincs/workflows/: __init__.py  bathymetry.py  curvenumber.py  downscaling.py  landuse.py  merge.py  storage_volume.py  subgrid.py  tiling.py
tests/: conftest.py  test_0utils.py  test_1model_class.py  test_config.py  test_cross_sections.py  test_discharge_points.py  test_forcing.py  test_observation_points.py  test_quadtree.py  test_regulargrid.py  test_thin_dams.py  test_water_level_boundary.py  test_wave_makers.py  test_weirs.py
tests/data/: local_data.yml  sfincs_test.yml
(+23 files in other folders)
